--- a/src/index.css
+++ b/src/index.css
@@ -36,6 +36,12 @@ a {
   text-decoration: none;
 }
 
+.PopUpCardsDescActive>div:first-child {
+  display: flex;
+  width: 100%;
+  justify-content: center;
+}
+
 .PopUpCardsDescInactive {
   transition: opacity 0.3s ease;
   visibility: hidden;
