--- a/src/Component/OrderCart/orderCart.css
+++ b/src/Component/OrderCart/orderCart.css
@@ -48,7 +48,7 @@
     font-family: "Nunito Sans", sans-serif;
     text-align: center;
     opacity: 0.8;
-    border-bottom: 1px solid #00000021;
+    /* border-bottom: 1px solid #00000021; */
     padding: 10px 0;
     color: green;
     font-size: 18px;
