--- a/src/Component/FoodCardHome/listFoodCard.css
+++ b/src/Component/FoodCardHome/listFoodCard.css
@@ -150,6 +150,14 @@
     color: #ed6755;
 }
 
+.secondArea p {
+    display: -webkit-box;
+    -webkit-line-clamp: 2;
+    -webkit-box-orient: vertical;
+    overflow: hidden;
+    text-overflow: ellipsis;
+}
+
 @media only screen and (max-width:991px) {
     .lisProductWrapper {
         width: 100%;
