--- a/src/Component/FoodCardHome/listFoodCard.css
+++ b/src/Component/FoodCardHome/listFoodCard.css
@@ -208,8 +208,11 @@
 
     .lisProductWrapper .wrapper {
         gap: 7%;
-        padding: 10px;
         min-width: unset !important;
+    }
+
+    .wrapper {
+        padding: 15px 10px;
     }
 
     .wrapper .img-area {
@@ -228,8 +231,8 @@
     }
 
     .wrapper .img-area {
-        width: 100px;
-        height: 100px;
+        width: 120px;
+        height: 120px;
     }
 
     .priceTag h1 {
