--- a/src/Component/OrderNow/orderNow.css
+++ b/src/Component/OrderNow/orderNow.css
@@ -174,6 +174,7 @@
 @media only screen and (max-width:680px) {
     .orderNowHolder1 {
         width: 90%;
+        margin-top: 10px;
     }
 
     .payment-option .payOptMid {
